# churn_redes_neurais

./: README.md  gradient_boosting.ipynb  kan.ipynb  mitra.ipynb  mlp.ipynb  model_utils.py  preprocessing.ipynb  pyproject.toml  stab.ipynb  tabkan.ipynb  tabpfn.ipynb
processed/: X_test.csv  X_test_sel.csv  X_train_resampled.csv  X_train_resampled_sel.csv  X_val.csv  X_val_sel.csv  preprocessor.pkl  selected_features.pkl  y_pred_proba.csv  y_test_sel.csv  y_train_resampled.csv  y_val_sel.csv
results/gradient_boosting/: confusion_matrix.csv  model.pkl  model_selected.pkl  predictions_test.csv  scores.csv
results/kan/: confusion_matrix.csv  model.pt  predictions_test.csv  scores.csv
results/mitra/: confusion_matrix.csv  predictions_test.csv  scores.csv
results/mlp/: ce_vs_mse_comparison.csv  confusion_matrix.csv  model.pt  predictions_test.csv  scores.csv
results/stab/: confusion_matrix.csv  model.pt  predictions_test.csv  scores.csv
results/tabkan/: confusion_matrix.csv  model.pkl  predictions_test.csv  scores.csv
results/tabpfn/: confusion_matrix.csv  predictions_test.csv  scores.csv
