[project]
name = "germano-churn"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "xgboost>=2.0",
    "optuna>=3.0",
    "torch>=2.5",
    "torchvision>=0.20",
    "tabpfn>=2.0,<3.0",
    "efficient-kan",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "tqdm>=4.66",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "nbconvert>=7.17.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
efficient-kan = { git = "https://github.com/Blealtan/efficient-kan.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
